<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyWord">


    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@color/background">

        <TextView
            android:id="@+id/titleDailyMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/title_daily_mode"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/resume_daily_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume_daily_word"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="200dp"
            android:paddingHorizontal="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="350dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <Button
                android:id="@+id/launch_daily_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launch_daily_mode"
                android:backgroundTint="@color/button"/>

            <TextView
                android:id="@+id/text_daily_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texte_daily_mode"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>