<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfiniteMode">


    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:background="@color/background">

        <TextView
            android:id="@+id/titleInfiniteMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/title_choice_mode"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume_infinite_mode"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="220dp"
            android:paddingHorizontal="20dp"/>

        <Button
            android:id="@+id/launch_infinity_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_infinity_mode"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:backgroundTint="@color/button"/>

    </RelativeLayout>
</FrameLayout>